--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Ecoleta</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;700&family=Ubuntu:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/styles/main.css">
+    <link rel="stylesheet" href="/styles/responsive.css">
+    <link rel="stylesheet" href="/styles/home.css">
 </head>
 <body>
     
@@ -13,7 +15,7 @@
         <div class="content">
             <header>
                 <img src="./assets/logo.svg" alt="Logomarca" />
-                <a href="google.com">
+                <a href="create-point.html">
                     <span></span>
                     Ecoleta Cadastre um ponto de colota</a>
             </header>
